<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="74dp"
    tools:layout_editor_absoluteY="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputServer"
            android:layout_width="343dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_server_text_server"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputUsername"
            android:layout_width="343dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputServer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_server_text_username"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputUsername">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_server_text_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputDomain"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_server_text_domain"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputShare"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputDomain">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_server_text_share"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputSuffix"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputShare">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editSuffix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_server_text_suffix"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonConfig"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/config_server_button_save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputSuffix"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
