<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="74dp"
    tools:layout_editor_absoluteY="0dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputXPos"
            android:layout_width="343dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editXPos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_signature_text_x_pos"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputYPos"
            android:layout_width="343dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputXPos">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editYPos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_signature_text_y_pos"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputWidth"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputYPos">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_signature_text_width"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputHeight"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputWidth">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_signature_text_height"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPage"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputHeight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_signature_text_page"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonSaveSignatureConfig"
            android:layout_width="117dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/config_signature_button_save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPage"
            app:layout_constraintVertical_bias="0.143" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>